--- a/bootstrap_stater/src/main/resources/templates/layouts/layout.html
+++ b/bootstrap_stater/src/main/resources/templates/layouts/layout.html
@@ -46,6 +46,7 @@
     <script src="/bootstrap/js/sb-admin-2.min.js"></script>
     <script src="/bootstrap/js/demo/chart-area-demo.js"></script>
     <script src="/bootstrap/js/demo/chart-pie-demo.js"></script>
+    <script src="/bootstrap/js/groupware/notice.js"></script>
 
     <th:block layout:fragment="scripts">
     </th:block>
