일정관리 수정중

--- a/bootstrap_stater/src/main/resources/templates/gw/notice.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/notice.html
@@ -107,48 +107,53 @@
 				</div>
 			</div>
 		</div>
+		<!-- 모달코드 -->
 		<div class="modal fade" id="noticeModal" tabindex="-1" role="dialog"
-	aria-labelledby="noticeModalLabel" aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="noticeModalLabel">공지사항 상세 내용</h5>
-				<button class="close" type="button" data-dismiss="modal"
-					aria-label="Close">
-					<span aria-hidden="true">×</span>
-				</button>
-			</div>
-			<div class="modal-body">
-				<div id="readModeContent">
-					<h4 id="modalTitle"></h4>
-					<p>
-						<small class="text-muted mr-3" id="modalAuthor"></small><small
-							class="text-muted" id="modalDate"></small>
-					</p>
-					<hr>
-					<pre id="modalContent"></pre>
-				</div>
+			aria-labelledby="noticeModalLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="noticeModalLabel">공지사항 상세 내용</h5>
+						<button class="close" type="button" data-dismiss="modal"
+							aria-label="Close">
+							<span aria-hidden="true">×</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<div id="readModeContent">
+							<h4 id="modalTitle"></h4>
+							<p>
+								<small class="text-muted mr-3" id="modalAuthor"></small><small
+									class="text-muted" id="modalDate"></small>
+							</p>
+							<hr>
+							<pre id="modalContent"></pre>
+						</div>
 
-				<form id="editForm" style="display:none;" action="/notice/ntcUpdate" method="post">
-					<input type="hidden" id="editNoticeId" name="notId"> 
-					<div class="form-group">
-						<label for="editTitle">제목</label>
-						<input type="text" class="form-control" id="editTitle" name="notTitle">
+						<form id="editForm" style="display: none;"
+							action="/notice/ntcUpdate" method="post">
+							<input type="hidden" id="editNoticeId" name="notId">
+							<div class="form-group">
+								<label for="editTitle">제목</label> <input type="text"
+									class="form-control" id="editTitle" name="notTitle">
+							</div>
+							<div class="form-group">
+								<label for="editContent">내용</label>
+								<textarea class="form-control" id="editContent"
+									name="notContent" rows="5"></textarea>
+							</div>
+						</form>
 					</div>
-					<div class="form-group">
-						<label for="editContent">내용</label>
-						<textarea class="form-control" id="editContent" name="notContent" rows="5"></textarea>
+					<div class="modal-footer">
+						<a href="#" class="btn btn-warning" id="editNoticeBtn">수정</a> <a
+							href="#" class="btn btn-danger" id="deleteNoticeBtn">삭제</a>
+						<button type="submit" class="btn btn-primary" id="saveEditBtn"
+							form="editForm" style="display: none;">수정 완료</button>
+						<button class="btn btn-secondary" type="button"
+							data-dismiss="modal">닫기</button>
 					</div>
-				</form>
-			</div>
-			<div class="modal-footer">
-				<a href="#" class="btn btn-warning" id="editNoticeBtn">수정</a> 
-				<a href="#" class="btn btn-danger" id="deleteNoticeBtn">삭제</a>
-				<button type="submit" class="btn btn-primary" id="saveEditBtn" form="editForm" style="display:none;">수정 완료</button>
-				<button class="btn btn-secondary" type="button" data-dismiss="modal">닫기</button>
+				</div>
 			</div>
 		</div>
-	</div>
-</div>
 	</th:block>
 </html>
