--- a/bootstrap_stater/src/main/resources/templates/layouts/layout.html
+++ b/bootstrap_stater/src/main/resources/templates/layouts/layout.html
@@ -47,6 +47,7 @@
     <script src="/bootstrap/js/demo/chart-area-demo.js"></script>
     <script src="/bootstrap/js/demo/chart-pie-demo.js"></script>
     <script src="/bootstrap/js/groupware/notice.js"></script>
+    <script src="/bootstrap/js/groupware/schedule.js"></script>
 
     <th:block layout:fragment="scripts">
     </th:block>
