--- a/bootstrap_stater/src/main/resources/templates/gw/schedule.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/schedule.html
@@ -61,6 +61,52 @@
 				</div>
 			</div>
 		</div>
+		<!-- 모달코드 -->
+		<div class="modal fade" id="addScheduleModal" tabindex="-1"
+			role="dialog" aria-labelledby="addScheduleModalLabel"
+			aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="addScheduleModalLabel">간편 일정 등록</h5>
+						<button class="close" type="button" data-dismiss="modal"
+							aria-label="Close">
+							<span aria-hidden="true">×</span>
+						</button>
+					</div>
+					<form th:action="@{/schedule/save}" method="post">
+						<div class="modal-body">
+							<div class="form-group">
+								<label for="modalTitle">일정 제목</label> <input type="text"
+									class="form-control" id="modalTitle" name="title" required>
+							</div>
+
+							<div class="form-group">
+								<label for="modalContent">일정 내용</label>
+								<textarea class="form-control" id="modalContent" name="content"
+									rows="4"></textarea>
+							</div>
+
+							<div class="form-group">
+								<label for="modalStartDate">시작일</label> <input type="date"
+									class="form-control" id="modalStartDate" name="startDate"
+									required>
+							</div>
+
+							<div class="form-group">
+								<label for="modalEndDate">종료일</label> <input type="date"
+									class="form-control" id="modalEndDate" name="endDate" required>
+							</div>
+						</div>
+						<div class="modal-footer">
+							<button type="submit" class="btn btn-primary">등록</button>
+							<button class="btn btn-secondary" type="button"
+								data-dismiss="modal">닫기</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
 	</th:block>
 </body>
 </html>
