--- a/bootstrap_stater/src/main/resources/templates/fragments/header.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/header.html
@@ -122,7 +122,7 @@
                         <a class="collapse-item" th:href="@{/notice}">공지사항</a>
 <!--                         <a class="collapse-item" th:href="@{/groupware/eNotice}">부서별 공지사항</a> -->
                         <h6 class="collapse-header">회사일정 메뉴:</h6>
-                        <a class="collapse-item" th:href="@{/groupware/schedule}">일정관리</a>
+                        <a class="collapse-item" th:href="@{/schedule}">일정관리</a>
 <!--                     	<a class="collapse-item" th:href="@{/groupware/aSchedule}">전체 일정</a> -->
 <!--                         <a class="collapse-item" th:href="@{/groupware/eSchedule}">부서별 일정</a> -->
                         <h6 class="collapse-header">공통문서 메뉴:</h6>
