--- a/bootstrap_stater/src/main/resources/templates/gw/ntcWrite.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/ntcWrite.html
@@ -42,6 +42,7 @@
 								id="notType" class="form-control">
 								<option value="">-- 부서를 선택하세요 --</option>
 								<option value="전체공지">전체공지</option>
+								<option value="부서별">부서별</option>
 								<option value="인사팀">인사팀</option>
 								<option value="구매팀">구매팀</option>
 								<option value="생산팀">생산팀</option>
