--- a/bootstrap_stater/src/main/resources/templates/gw/schedule.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/schedule.html
@@ -78,12 +78,12 @@
 						<div class="modal-body">
 							<div class="form-group">
 								<label for="modalTitle">일정 제목</label> <input type="text"
-									class="form-control" id="modalTitle" name="title" required>
+									class="form-control" id="modalTitle" name="schTitle" required>
 							</div>
 
 							<div class="form-group">
 								<label for="modalContent">일정 내용</label>
-								<textarea class="form-control" id="modalContent" name="content"
+								<textarea class="form-control" id="modalContent" name="schContent"
 									rows="4"></textarea>
 							</div>
 
