--- a/bootstrap_stater/src/main/resources/templates/gw/schedule.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/schedule.html
@@ -144,12 +144,10 @@
 						</div>
 					</div>
 					<div class="modal-footer">
-						<a href="#" class="btn btn-warning" id="editNoticeBtn">수정</a> 
-						<a href="#" class="btn btn-danger" id="deleteNoticeBtn">삭제</a>
-						<button type="submit" class="btn btn-primary" id="saveEditBtn"
-							form="editForm" style="display: none;">수정 완료</button>
-						<button class="btn btn-secondary" type="button"
-							data-dismiss="modal">닫기</button>
+						<button type="button" class="btn btn-warning" id="editScheduleBtn">수정</button>
+						<button type="button" class="btn btn-danger" id="deleteScheduleBtn">삭제</button>
+						<button type="submit" form="editScheduleForm" class="btn btn-primary" id="saveEditBtn" style="display: none;">수정	완료</button>
+						<button class="btn btn-secondary" type="button"	data-dismiss="modal">닫기</button>
 					</div>
 				</div>
 			</div>
